tests/diagnostics/statements/assignments/immutable_binding/expect.txt
# exit: 1
input/main.coppice:3:5: error: cannot assign to immutable binding 'x'
      x = 2
      ^
